[package]
name = "puroveneno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
itertools = "0.11.0"
regex = "1.10.2"
termion = "2.0.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
